# my-arithmetic-kylian

./: .gitignore  .gitlab-ci.yml  README.md  conf.py  index.rst  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: deploy.yml  run-tests.yml
_build/doctrees/: environment.pickle  index.doctree  pgcd.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  pgcd.html  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py
my_arithmetic_kylian/: pgcd.py
tests/: test_pgcd.py
