[tool.poetry]
name = "my-arithmetic-kylian"
version = "0.1.0"
description = ""
authors = ["Kyliroco <kylian.corail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
tox = "*"