[tool.poetry]
name = "my-arithmetic-kylian"
version = "0.1.0"
description = ""
authors = ["Kyliroco <kylian.corail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
poetry-dynamic-versioning = "^1.1.1"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.poetry-dynamic-versioning.tagged-metadata]
enabled = true

[tool.poetry-dynamic-versioning.branches.main]
pattern = "main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
tox = "*"
pytest = "*"
coverage = "*"
sphinx="*"
sphinxcontrib-napoleon = "*"
coveralls = "*"
